--- a/notebooks/search/08-learning-to-rank.ipynb
+++ b/notebooks/search/08-learning-to-rank.ipynb
@@ -17,7 +17,7 @@
     "- Extract features from our dataset using Elasticsearch's Query DSL, including custom `script_score` queries.\n",
     "- Build a training dataset by combining extracted features with a human curated judgment list.\n",
     "- Train a Learning To Rank model using [XGBoost](https://xgboost.ai/).\n",
-    "- Deploy the trained model to Elasticsearch using Eland.\n",
+    "- Deploy the trained model to Elasticsearch using [Eland](https://eland.readthedocs.io/en/latest/).\n",
     "- Use the model as a rescorer for second stage re-ranking.\n",
     "- Evaluate the impact of the LTR model on search relevance, by comparing search results before and after applying the model.\n",
     "\n",
