--- a/notebooks/search/08-learning-to-rank.ipynb
+++ b/notebooks/search/08-learning-to-rank.ipynb
@@ -1155,9 +1155,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-We can see that the `title_bm25` and `popularity` features are weighted more importantly in our trained model.  Now all results include the query terms in the title, outlining the importance of the `title_bm25` feature in the model. Similarly, more popular movies now rank higher, for example `Star Wars: Episode I - The Phantom Menace` is now in third position.
+      "We can see that the `title_bm25` and `popularity` features are weighted more importantly in our trained model.  Now all results include the query terms in the title, outlining the importance of the `title_bm25` feature in the model. Similarly, more popular movies now rank higher, for example `Star Wars: Episode I - The Phantom Menace` is now in third position."
    ]
-  }
+    }
+    
  ],
  "metadata": {
   "colab": {
