Update LangChain imports to use `langchain-elasticsearch`
the new partner integration package:
https://pypi.org/project/langchain-elasticsearch/

--- a/notebooks/document-chunking/with-langchain-splitters.ipynb
+++ b/notebooks/document-chunking/with-langchain-splitters.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 -m pip install -qU langchain elasticsearch eland jq"
+    "!python3 -m pip install -qU langchain langchain-elasticsearch elasticsearch eland jq"
    ]
   },
   {
@@ -548,7 +548,7 @@
     }
    ],
    "source": [
-    "from langchain.vectorstores.elasticsearch import (\n",
+    "from langchain_elasticsearch import (\n",
     "    ElasticsearchStore,\n",
     "    ApproxRetrievalStrategy,\n",
     ")\n",
