--- a/notebooks/generative-ai/chatbot.ipynb
+++ b/notebooks/generative-ai/chatbot.ipynb
@@ -74,7 +74,7 @@
     }
    ],
    "source": [
-    "%pip install -qU langchain openai elasticsearch tiktoken"
+    "%pip install -qU langchain openai langchain-elasticsearch tiktoken"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.vectorstores import ElasticsearchStore\n",
+    "from langchain_elasticsearch import ElasticsearchStore\n",
     "from langchain.embeddings import OpenAIEmbeddings\n",
     "\n",
     "embeddings = OpenAIEmbeddings(openai_api_key=OPENAI_API_KEY)\n",
