--- a/notebooks/integrations/amazon-bedrock/langchain-qa-example.ipynb
+++ b/notebooks/integrations/amazon-bedrock/langchain-qa-example.ipynb
@@ -33,12 +33,12 @@
    "outputs": [],
    "source": [
     "# install packages\n",
-    "!python3 -m pip install -qU langchain elasticsearch boto3\n",
+    "!python3 -m pip install -qU langchain langchain-elasticsearch boto3\n",
     "\n",
     "# import modules\n",
     "from getpass import getpass\n",
     "from urllib.request import urlopen\n",
-    "from langchain.vectorstores import ElasticsearchStore\n",
+    "from langchain_elasticsearch import ElasticsearchStore\n",
     "from langchain.embeddings.bedrock import BedrockEmbeddings\n",
     "from langchain.llms import Bedrock\n",
     "from langchain.chains import RetrievalQA\n",
