--- a/notebooks/integrations/gemini/qa-langchain-gemini-elasticsearch.ipynb
+++ b/notebooks/integrations/gemini/qa-langchain-gemini-elasticsearch.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install -q -U google-generativeai elasticsearch langchain langchain_google_genai"
+    "pip install -q -U google-generativeai langchain-elasticsearch langchain langchain_google_genai"
    ]
   },
   {
@@ -60,8 +60,7 @@
     "from getpass import getpass\n",
     "from urllib.request import urlopen\n",
     "\n",
-    "from elasticsearch import Elasticsearch, helpers\n",
-    "from langchain.vectorstores import ElasticsearchStore\n",
+    "from langchain_elasticsearch import ElasticsearchStore\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
     "from langchain_google_genai import GoogleGenerativeAIEmbeddings\n",
     "from langchain_google_genai import ChatGoogleGenerativeAI\n",
