--- a/notebooks/langchain/langchain-using-own-model.ipynb
+++ b/notebooks/langchain/langchain-using-own-model.ipynb
@@ -30,10 +30,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 -m pip install -qU langchain elasticsearch tiktoken  sentence-transformers eland  transformers\n",
+    "!python3 -m pip install -qU langchain langchain-elasticsearch tiktoken  sentence-transformers eland  transformers\n",
     "\n",
     "from getpass import getpass\n",
-    "from langchain.vectorstores import ElasticsearchStore\n",
+    "from langchain_elasticsearch import ElasticsearchStore\n",
     "from urllib.request import urlopen\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "import json"
