--- a/notebooks/langchain/langchain-vector-store-using-elser.ipynb
+++ b/notebooks/langchain/langchain-vector-store-using-elser.ipynb
@@ -33,11 +33,11 @@
    "outputs": [],
    "source": [
     "# install packages\n",
-    "!python3 -m pip install -qU langchain openai elasticsearch tiktoken\n",
+    "!python3 -m pip install -qU langchain langchain-elasticsearch openai tiktoken\n",
     "\n",
     "# import modules\n",
     "from getpass import getpass\n",
-    "from langchain.vectorstores import ElasticsearchStore\n",
+    "from langchain_elasticsearch import ElasticsearchStore\n",
     "from urllib.request import urlopen\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "import json"
