--- a/notebooks/langchain/multi-query-retriever-examples/chatbot-with-multi-query-retriever.ipynb
+++ b/notebooks/langchain/multi-query-retriever-examples/chatbot-with-multi-query-retriever.ipynb
@@ -37,10 +37,10 @@
     }
    ],
    "source": [
-    "!python3 -m pip install -qU jq lark elasticsearch langchain_openai tiktoken\n",
+    "!python3 -m pip install -qU jq lark langchain langchain-elasticsearch langchain_openai tiktoken\n",
     "\n",
     "from langchain_openai.embeddings import OpenAIEmbeddings\n",
-    "from langchain.vectorstores import ElasticsearchStore\n",
+    "from langchain_elasticsearch import ElasticsearchStore\n",
     "from langchain_openai.llms import OpenAI\n",
     "from langchain.retrievers.multi_query import MultiQueryRetriever\n",
     "from getpass import getpass"
