--- a/notebooks/langchain/multi-query-retriever-examples/langchain-multi-query-retriever.ipynb
+++ b/notebooks/langchain/multi-query-retriever-examples/langchain-multi-query-retriever.ipynb
@@ -38,11 +38,11 @@
     }
    ],
    "source": [
-    "!python3 -m pip install -qU lark elasticsearch langchain_openai tiktoken\n",
+    "!python3 -m pip install -qU lark langchain langchain-elasticsearh langchain_openai tiktoken\n",
     "\n",
     "from langchain.schema import Document\n",
     "from langchain_openai.embeddings import OpenAIEmbeddings\n",
-    "from langchain.vectorstores import ElasticsearchStore\n",
+    "from langchain_elasticsearch import ElasticsearchStore\n",
     "from langchain_openai.chat_models import ChatOpenAI\n",
     "from langchain.retrievers.multi_query import MultiQueryRetriever\n",
     "from getpass import getpass"
