--- a/notebooks/generative-ai/question-answering.ipynb
+++ b/notebooks/generative-ai/question-answering.ipynb
@@ -49,7 +49,7 @@
     }
    ],
    "source": [
-    "!python3 -m pip install -qU langchain openai==0.28.1 elasticsearch tiktoken jq"
+    "!python3 -m pip install -qU langchain langchain-elasticsearch openai==0.28.1 tiktoken jq"
    ]
   },
   {
@@ -77,7 +77,7 @@
    },
    "outputs": [],
    "source": [
-    "from langchain.vectorstores import ElasticsearchStore\n",
+    "from langchain_elasticsearch import ElasticsearchStore\n",
     "from langchain.embeddings.openai import OpenAIEmbeddings\n",
     "from getpass import getpass\n",
     "\n",
