--- a/notebooks/langchain/self-query-retriever-examples/chatbot-example.ipynb
+++ b/notebooks/langchain/self-query-retriever-examples/chatbot-example.ipynb
@@ -38,11 +38,11 @@
     }
    ],
    "source": [
-    "!python3 -m pip install -qU lark elasticsearch langchain openai\n",
+    "!python3 -m pip install -qU lark elasticsearch langchain langchain-elasticsearch openai\n",
     "\n",
     "from langchain.schema import Document\n",
     "from langchain.embeddings.openai import OpenAIEmbeddings\n",
-    "from langchain.vectorstores import ElasticsearchStore\n",
+    "from langchain_elasticsearch import ElasticsearchStore\n",
     "from langchain.llms import OpenAI\n",
     "from langchain.retrievers.self_query.base import SelfQueryRetriever\n",
     "from langchain.chains.query_constructor.base import AttributeInfo\n",
