--- a/notebooks/langchain/self-query-retriever-examples/chatbot-with-bm25-only-example.ipynb
+++ b/notebooks/langchain/self-query-retriever-examples/chatbot-with-bm25-only-example.ipynb
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "!python3 -m pip install -qU lark elasticsearch langchain openai"
+    "!python3 -m pip install -qU lark elasticsearch langchain langchain-elasticsearch openai"
    ]
   },
   {
@@ -209,12 +209,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.vectorstores.elasticsearch import ApproxRetrievalStrategy\n",
     "from typing import List, Union\n",
     "from langchain.retrievers.self_query.base import SelfQueryRetriever\n",
     "from langchain.chains.query_constructor.base import AttributeInfo\n",
     "from langchain.llms import OpenAI\n",
-    "from langchain.vectorstores.elasticsearch import ElasticsearchStore\n",
+    "from langchain_elasticsearch import ApproxRetrievalStrategy, ElasticsearchStore\n",
     "\n",
     "# Add details about metadata fields\n",
     "metadata_field_info = [\n",
