notebook for RAG using gemma, huggingface and elastic

--- a/notebooks/integrations/gemma/rag-gemma-huggingface-elastic.ipynb
+++ b/notebooks/integrations/gemma/rag-gemma-huggingface-elastic.ipynb
@@ -189,7 +189,7 @@
     "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
     "    es_api_key=ELASTIC_API_KEY,\n",
     "    index_name=elastic_index_name,\n",
-    "    strategy=ElasticsearchStore.SparseVectorRetrievalStrategy()\n",
+    "    strategy=ElasticsearchStore.SparseVectorRetrievalStrategy(),\n",
     ")\n",
     "\n",
     "es"
@@ -296,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retriever=es.as_retriever(search_kwargs={\"k\": 10})\n",
+    "retriever = es.as_retriever(search_kwargs={\"k\": 10})\n",
     "\n",
     "template = \"\"\"Answer the question based only on the following context:\\n\n",
     "\n",
