notebook for RAG using gemma, huggingface and elastic

--- a/notebooks/integrations/gemma/rag-gemma-huggingface-elastic.ipynb
+++ b/notebooks/integrations/gemma/rag-gemma-huggingface-elastic.ipynb
@@ -5,7 +5,7 @@
    "id": "faa09879-9128-4864-8bb5-945ef9b8e84c",
    "metadata": {},
    "source": [
-    "# RAG using Google's Gemma, Hugging Face and Elastic"
+    "# RAG: Using Gemma LLM locally for question answering on private data"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://raw.githubusercontent.com/ashishtiwari1993/langchain-elasticsearch-RAG/main/data.json\"\n",
+    "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/datasets/workplace-documents.json\"\n",
     "\n",
     "response = urlopen(url)\n",
     "\n",
@@ -157,11 +157,13 @@
     "\n",
     "for doc in workplace_docs:\n",
     "    content.append(doc[\"content\"])\n",
-    "    metadata.append({\n",
-    "        \"name\": doc[\"name\"],\n",
-    "        \"summary\": doc[\"summary\"],\n",
-    "        \"rolePermissions\":doc[\"rolePermissions\"]\n",
-    "    })\n",
+    "    metadata.append(\n",
+    "        {\n",
+    "            \"name\": doc[\"name\"],\n",
+    "            \"summary\": doc[\"summary\"],\n",
+    "            \"rolePermissions\":doc[\"rolePermissions\"]\n",
+    "        }\n",
+    "    )\n",
     "\n",
     "text_splitter = CharacterTextSplitter(chunk_size=50, chunk_overlap=0)\n",
     "docs = text_splitter.create_documents(content, metadatas=metadata)"
@@ -211,6 +213,7 @@
    "outputs": [],
    "source": [
     "from huggingface_hub import notebook_login\n",
+    "\n",
     "notebook_login()"
    ]
   },
@@ -277,7 +280,6 @@
    "outputs": [],
    "source": [
     "def format_docs(docs):\n",
-    "    print(docs)\n",
     "    return \"\\n\\n\".join(doc.page_content for doc in docs)"
    ]
   },
@@ -325,10 +327,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "ba312f17-44ae-423d-89a0-ea01eccd85b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Question:  What is the pet policy in the office?\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Answer: The pet policy in the office allows employees to bring pets to the office, subject to approval by the HR department. Pets covered under this policy include dogs, cats, and other small, non-exotic animals, subject to approval by the HR department.'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q = input(\"Question: \")\n",
     "chain.invoke(q)"
