--- a/notebooks/integrations/gemma/rag-gemma-huggingface-elastic.ipynb
+++ b/notebooks/integrations/gemma/rag-gemma-huggingface-elastic.ipynb
@@ -327,31 +327,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "ba312f17-44ae-423d-89a0-ea01eccd85b5",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Question:  What is the pet policy in the office?\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'Answer: The pet policy in the office allows employees to bring pets to the office, subject to approval by the HR department. Pets covered under this policy include dogs, cats, and other small, non-exotic animals, subject to approval by the HR department.'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "q = input(\"Question: \")\n",
-    "chain.invoke(q)"
+    "chain.invoke(\"What is the pet policy in the office?\")"
    ]
   }
  ],
