notebook for RAG using gemma, huggingface and elastic

--- a/notebooks/integrations/gemma/rag-gemma-huggingface-elastic.ipynb
+++ b/notebooks/integrations/gemma/rag-gemma-huggingface-elastic.ipynb
@@ -161,7 +161,7 @@
     "        {\n",
     "            \"name\": doc[\"name\"],\n",
     "            \"summary\": doc[\"summary\"],\n",
-    "            \"rolePermissions\": doc[\"rolePermissions\"]\n",
+    "            \"rolePermissions\": doc[\"rolePermissions\"],\n",
     "        }\n",
     "    )\n",
     "\n",
