Enclose name with special characters in backticks

--- a/notebooks/search/esql/esql-getting-started.ipynb
+++ b/notebooks/search/esql/esql-getting-started.ipynb
@@ -21,8 +21,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Collecting elasticsearch\n",
       "  Downloading elasticsearch-8.12.1-py3-none-any.whl (432 kB)\n",
@@ -47,16 +47,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "id": "b2vOwH2lbFFF",
-    "outputId": "80290b0d-e540-4236-d0b6-49c6c4ed5334",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "b2vOwH2lbFFF",
+    "outputId": "80290b0d-e540-4236-d0b6-49c6c4ed5334"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "<ipython-input-2-5050c293eb41>:5: DeprecationWarning: Importing from the 'elasticsearch.client' module is deprecated. Instead use 'elasticsearch' module for importing the client.\n",
       "  from elasticsearch.client import EsqlClient\n"
@@ -112,17 +112,22 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "PMU9fyT07j3C"
+   },
    "source": [
     "## Add sample data to Elasticsearch\n",
     "\n",
     "Before we index our sample dataset, let's create an index named `sample_data` with the correct [mappings](https://www.elastic.co/guide/en/elasticsearch/reference/current/mapping.html)."
-   ],
-   "metadata": {
-    "id": "PMU9fyT07j3C"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "id": "VZlVzRNP8IXo"
+   },
+   "outputs": [],
    "source": [
     "index_name = \"sample_data\"\n",
     "\n",
@@ -135,24 +140,36 @@
     "# Create the index\n",
     "if not client.indices.exists(index=index_name):\n",
     "    client.indices.create(index=index_name, body=mappings)"
-   ],
-   "metadata": {
-    "id": "VZlVzRNP8IXo"
-   },
-   "execution_count": 7,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Now we can index the data using the Elasticsearch Python client's [bulk helpers](https://elasticsearch-py.readthedocs.io/en/latest/helpers.html#bulk-helpers)."
-   ],
    "metadata": {
     "id": "QjuRVtqc8esR"
-   }
+   },
+   "source": [
+    "Now we can index the data using the Elasticsearch Python client's [bulk helpers](https://elasticsearch-py.readthedocs.io/en/latest/helpers.html#bulk-helpers)."
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "gKYu3MHQ8te5",
+    "outputId": "bc69f677-aec1-4ea5-9166-e51444f4e9ee"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully indexed 7 documents.\n"
+     ]
+    }
+   ],
    "source": [
     "# Documents to be indexed\n",
     "documents = [\n",
@@ -210,23 +227,6 @@
     "    print(f\"Some documents failed to index: {failed}\")\n",
     "else:\n",
     "    print(f\"Successfully indexed {success} documents.\")"
-   ],
-   "metadata": {
-    "id": "gKYu3MHQ8te5",
-    "outputId": "bc69f677-aec1-4ea5-9166-e51444f4e9ee",
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    }
-   },
-   "execution_count": 8,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Successfully indexed 7 documents.\n"
-     ]
-    }
    ]
   },
   {
@@ -305,8 +305,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "@timestamp               | client_ip    | event_duration | message              \n",
       "--------------------------------------------------------------------------------\n",
@@ -354,8 +354,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "@timestamp               | client_ip    | event_duration | message              \n",
       "--------------------------------------------------------------------------------\n",
@@ -398,8 +398,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "@timestamp               | client_ip    | event_duration | message              \n",
       "--------------------------------------------------------------------------------\n",
@@ -446,8 +446,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "@timestamp               | client_ip   | event_duration | message         \n",
       "--------------------------------------------------------------------------\n",
@@ -489,8 +489,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "@timestamp               | client_ip    | event_duration | message              \n",
       "--------------------------------------------------------------------------------\n",
@@ -541,16 +541,16 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "id": "ztm9lRiIFTnS",
-    "outputId": "79aa1c17-b3c8-4fd8-f4c9-6f3bc06f987b",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "ztm9lRiIFTnS",
+    "outputId": "79aa1c17-b3c8-4fd8-f4c9-6f3bc06f987b"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "@timestamp               | client_ip   | event_duration | message              \n",
       "-------------------------------------------------------------------------------\n",
@@ -595,16 +595,16 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "id": "bxCjCNwxFx4e",
-    "outputId": "caefb72f-5f9e-4541-d688-0ee51fda87c5",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "bxCjCNwxFx4e",
+    "outputId": "caefb72f-5f9e-4541-d688-0ee51fda87c5"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "@timestamp               | client_ip    | event_duration | message               | duration_ms\n",
       "----------------------------------------------------------------------------------------------\n",
@@ -641,16 +641,16 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "id": "RTx1xw2ZF__8",
-    "outputId": "72293fb7-8e2f-4042-d9a3-db6ff7d53d19",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "RTx1xw2ZF__8",
+    "outputId": "72293fb7-8e2f-4042-d9a3-db6ff7d53d19"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "@timestamp               | client_ip    | event_duration | message               | duration_ms\n",
       "----------------------------------------------------------------------------------------------\n",
@@ -691,16 +691,16 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "id": "v-vamaNVGTwS",
-    "outputId": "6bf99372-dc6f-4f37-ef51-71b9da34d3e7",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "v-vamaNVGTwS",
+    "outputId": "6bf99372-dc6f-4f37-ef51-71b9da34d3e7"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "median_duration\n",
       "---------------\n",
@@ -731,16 +731,16 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "id": "QLGT8GTvGZIg",
-    "outputId": "90e0a7a8-4294-4d81-81bf-55c0296e18db",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "QLGT8GTvGZIg",
+    "outputId": "90e0a7a8-4294-4d81-81bf-55c0296e18db"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "median_duration | max_duration\n",
       "------------------------------\n",
@@ -771,16 +771,16 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "id": "EWGMRhZrHH-c",
-    "outputId": "4d106e79-20bd-4979-a653-51f403f086e5",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "EWGMRhZrHH-c",
+    "outputId": "4d106e79-20bd-4979-a653-51f403f086e5"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "median_duration | client_ip   \n",
       "------------------------------\n",
@@ -818,16 +818,16 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "id": "V62P4GEgHojF",
-    "outputId": "6beaf6de-6e5c-49bc-f865-3fb1518cda9a",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "V62P4GEgHojF",
+    "outputId": "6beaf6de-6e5c-49bc-f865-3fb1518cda9a"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "@timestamp               | client_ip    | event_duration | message               | event_duration/1000000.0\n",
       "-----------------------------------------------------------------------------------------------------------\n",
@@ -857,23 +857,23 @@
     "id": "Al_cDCIIHpsR"
    },
    "source": [
-    "In this query, `EVAL` adds a new column named `event_duration/1000000.0`:"
+    "In this query, `EVAL` adds a new column named `event_duration/1000000.0`. Because its name contains special characters, to access this column, quote it with backticks:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "id": "Jv6y2SjLHtBA",
-    "outputId": "242f2ced-f313-4a4a-bab8-f6ccad917993",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "Jv6y2SjLHtBA",
+    "outputId": "242f2ced-f313-4a4a-bab8-f6ccad917993"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "MEDIAN(`event_duration/1000000.0`)\n",
       "----------------------------------\n",
@@ -885,7 +885,7 @@
     "esql_query = \"\"\"\n",
     "FROM sample_data\n",
     "| EVAL event_duration/1000000.0\n",
-    "| STATS MEDIAN(event_duration/1000000.0)\n",
+    "| STATS MEDIAN(`event_duration/1000000.0`)\n",
     "\"\"\"\n",
     "response = esql.query(query=esql_query)\n",
     "format_response(response)"
@@ -908,16 +908,16 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "id": "WtKXFOfyH4zt",
-    "outputId": "c85f9f3a-fb18-4c15-8f51-25cc9662ea96",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "WtKXFOfyH4zt",
+    "outputId": "c85f9f3a-fb18-4c15-8f51-25cc9662ea96"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "@timestamp               | bucket                  \n",
       "---------------------------------------------------\n",
@@ -954,16 +954,16 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "id": "FgJHT0BpIEqj",
-    "outputId": "da6dacb1-5a29-4618-d974-60d1134af984",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "FgJHT0BpIEqj",
+    "outputId": "da6dacb1-5a29-4618-d974-60d1134af984"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "COUNT(*) | bucket                  \n",
       "-----------------------------------\n",
@@ -996,16 +996,16 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "id": "gDHT5BHNIHQM",
-    "outputId": "9eceda80-1fb7-4834-c8c0-c047fdb14c0d",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "gDHT5BHNIHQM",
+    "outputId": "9eceda80-1fb7-4834-c8c0-c047fdb14c0d"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "median_duration | bucket                  \n",
       "------------------------------------------\n",
@@ -1045,22 +1045,22 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "id": "2QNKgM--IQtJ",
-    "outputId": "2288d306-4a78-4d89-c275-a32d0fdb8b79",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "2QNKgM--IQtJ",
+    "outputId": "2288d306-4a78-4d89-c275-a32d0fdb8b79"
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "ObjectApiResponse({'task': 'dGhch02RRVuQ2Xb57064RQ:3175562'})"
       ]
      },
+     "execution_count": 30,
      "metadata": {},
-     "execution_count": 30
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1120,16 +1120,16 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "id": "IHER1VM2KsqV",
-    "outputId": "31523029-d7a5-4624-f743-da3d3c18d1d9",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "IHER1VM2KsqV",
+    "outputId": "31523029-d7a5-4624-f743-da3d3c18d1d9"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "@timestamp               | event_duration | client_ip    | env        \n",
       "----------------------------------------------------------------------\n",
@@ -1167,16 +1167,16 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "id": "9Fyz2JkZK47P",
-    "outputId": "041a5eb3-ec36-498f-ee78-2d65c0d7450c",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "9Fyz2JkZK47P",
+    "outputId": "041a5eb3-ec36-498f-ee78-2d65c0d7450c"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "median_duration | env        \n",
       "-----------------------------\n",
@@ -1232,16 +1232,16 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "id": "kwX_AFgeLEvQ",
-    "outputId": "58b08ea5-cdd5-4ce0-cc2f-3d1db39b8ddb",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "kwX_AFgeLEvQ",
+    "outputId": "58b08ea5-cdd5-4ce0-cc2f-3d1db39b8ddb"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "@timestamp               | client_ip    | event_duration | message               | server_ip\n",
       "--------------------------------------------------------------------------------------------\n",
@@ -1279,16 +1279,16 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
-    "id": "8_uEN-H5LaXH",
-    "outputId": "db674a50-6094-427f-8cee-d3e28a7260d0",
     "colab": {
      "base_uri": "https://localhost:8080/"
-    }
+    },
+    "id": "8_uEN-H5LaXH",
+    "outputId": "db674a50-6094-427f-8cee-d3e28a7260d0"
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "COUNT(*) | server_ip\n",
       "--------------------\n",
